--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2,6 +2,9 @@
 
 :root {
   --blue: #5271ff;
+  --border: #ebebeb;
+  --light: #ebebeb80;
+  --black: #212427;
 }
 
 ::-webkit-scrollbar {
@@ -105,6 +108,7 @@ h6 {
 body {
   font-family: "Montserrat", serif;
   font-size: 16px;
+  color: var(--black);
 }
 
 .container {
