--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -115,3 +115,9 @@ body {
   max-width: 1180px;
   margin: 0 auto;
 }
+
+.subtitle {
+  font-style: italic;
+  text-decoration: underline;
+  font-size: 18px;
+}
