--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -122,6 +122,16 @@ body {
   font-size: 18px;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 @media screen and (max-width: 1024px) {
   .container {
     max-width: 100%;
